--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-html-id": "^0.1.5",
-    "react-router-dom": "^4.3.1"
+    "react-redux": "^6.0.0",
+    "react-router-dom": "^4.3.1",
+    "redux": "^4.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "flow-bin": "^0.87.0",
     "parcel-bundler": "^1.10.3"
   }
