--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-html-id": "^0.1.5",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
